--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.0",
+    "discord.js": "^14.7.1",
     "discord.js-selfbot-v13": "^2.9.10",
     "dotenv": "^16.0.3"
   }
